# solid-tauri-2-example

./: README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: App.tsx  Upload.tsx  Welcome.tsx  bindings.ts  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  prefixtree.rs  unzip.rs
