[package]
name = "ziptauri"
version = "0.1.0"
description = "The Zip Tauri App"
authors = ["Swarnim Arun <mail@swarnimarun.com>"]
license = "MIT"
repository = "https://github.com/swarnimarun/ziptauri"
edition = "2021"

[lib]
name = "ziplib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.22", features = ["tracing", "specta"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "=2.0.0-rc.12"
tauri-plugin-updater = "2.0.0-beta.8"
tauri-plugin-dialog = "2.0.0-beta.5"
tauri-specta = { version = "=2.0.0-rc.11", features = [
  "javascript",
  "typescript",
] }
thiserror = "1.0.61"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
  "json",
  "env-filter",
  "time",
] }
directories = "5.0.1"
zip = "2.1.3"
futures = "0.3.30"


# Optimize for smaller binary size
[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
# note this slows down the build significantly for release
# consider testing for specific projects before copying the configuration
codegen-units = 16 # Compiles crate as fewer codegen unit for better optimizations
lto = true         # Enables link time optimizations
strip = true       # Remove debug symbols
opt-level = "s"    # Optimize for binary size
